--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 				
 				<div class="social-links">
-					<img id="social_img" src="images/follow.png">
+					<img id="social_img" src="images/follow.png"></img>
 					<h3>Stalk me as much as you want : </h3>
 					<div class="same">
 					<a target="_blank" href="https://www.instagram.com/devshub21/"><img id="instagram" src="https://img-premium.flaticon.com/png/512/87/87390.png?token=exp=1622876310~hmac=179d26500d3fd709d24ae14a00218fc9"></img></a>
