--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
 					<img id="social_img" src="images/follow.png"></img>
 					<h3>Stalk me as much as you want : </h3>
 					<div class="same">
-					<a target="_blank" href="https://www.instagram.com/devshub21/"><img id="instagram" src="https://img-premium.flaticon.com/png/512/87/87390.png?token=exp=1622876310~hmac=179d26500d3fd709d24ae14a00218fc9"></img></a>
-					
+					<a target="_blank" href="https://www.instagram.com/devshub21/"><img id="instagram" src="https://image.flaticon.com/icons/png/512/1400/1400829.png"></img></a>
 					<a target="_blank" href="https://twitter.com/devshub21"><img id="twitter" src="https://image.flaticon.com/icons/png/512/1384/1384049.png"></img></a>
 					<a target="_blank" href="https://github.com/devshub21"><img id="github" src="https://image.flaticon.com/icons/png/512/25/25657.png"></img></a>
 					<a target="_blank" href="https://www.linkedin.com/in/shubham-patel-88978217b/"><img id="linkedln" src="https://image.flaticon.com/icons/png/512/1384/1384088.png"></img></a>
