--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 				
 				<div class="social-links">
-					<img id="social_img" src="follow.png"></img>
+					<img id="social_img" src="follow.PNG"></img>
 					<h3>Stalk me as much as you want : </h3>
 					<div class="same">
 					<a target="_blank" href="https://www.instagram.com/devshub21/"><img id="instagram" src="https://image.flaticon.com/icons/png/512/1400/1400829.png"></img></a>
