Added Buy me a coffee

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					
 
 					<ul id="navigation">
-						<li><a href="index.html#contact">Contact</a></li>
+						<li><a href="https://www.buymeacoffee.com/devshub21">Buy me a <img src="https://image.flaticon.com/icons/png/512/3534/3534033.png"></img></a></li>
 
 					</ul>
 				</div>
@@ -101,10 +101,10 @@
 						</ul>
 
 						<ul>
-							<li>API Handling</li>
-							<li>JS Charts</li>
+							<li>Machine Learning</li>
+							<li>API handling</li>
 							<li>Team Management</li>
-							<li>Heroku</li>
+							<li>Heroku & Github</li>
 							<li>HTML/CSS</li>
 						</ul>
 
