--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					
 
 					<ul id="navigation">
-						<li><a href="https://www.buymeacoffee.com/devshub21">Buy me a <img src="https://image.flaticon.com/icons/png/512/3534/3534033.png"></img></a></li>
+						<li><a href="https://www.buymeacoffee.com/devshub21">Buy me a <img id="book" src="https://image.flaticon.com/icons/png/512/3534/3534033.png"></img></a></li>
 
 					</ul>
 				</div>
