--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					<img id="social_img" src="Twitter.png" alt="Opps,you can visit twitter for the banner">
 					<h3>Stalk me as much as you want : </h3>
 					<div class="same">
-					<a target="_blank" href="https://www.instagram.com/devshub21/"><img id="instagram" src="https://image.flaticon.com/icons/png/512/1400/1400829.png"></img></a>
+					<a target="_blank" href="https://www.instagram.com/shxb.__/"><img id="instagram" src="https://image.flaticon.com/icons/png/512/1400/1400829.png"></img></a>
 					
 					<a target="_blank" href="https://twitter.com/devshub21"><img id="twitter" src="https://image.flaticon.com/icons/png/512/1384/1384049.png"></img></a>
 					<a target="_blank" href="https://github.com/devshub21"><img id="github" src="https://image.flaticon.com/icons/png/512/25/25657.png"></img></a>
