--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 					<div class="same">
 					<a target="_blank" href="https://www.instagram.com/shxb.__/"><img id="instagram" src="https://image.flaticon.com/icons/png/512/1400/1400829.png"></img></a>
 					
-					<a target="_blank" href="https://twitter.com/devshub21"><img id="twitter" src="https://image.flaticon.com/icons/png/512/1384/1384049.png"></img></a>
-					<a target="_blank" href="https://github.com/devshub21"><img id="github" src="https://image.flaticon.com/icons/png/512/25/25657.png"></img></a>
+					<a target="_blank" href="https://twitter.com/shxb7_"><img id="twitter" src="https://image.flaticon.com/icons/png/512/1384/1384049.png"></img></a>
+					<a target="_blank" href="https://github.com/shxb7_"><img id="github" src="https://image.flaticon.com/icons/png/512/25/25657.png"></img></a>
 					<a target="_blank" href="https://www.linkedin.com/in/shubham-patel-88978217b/"><img id="linkedln" src="https://image.flaticon.com/icons/png/512/1384/1384088.png"></img></a>
 				</div>
 				</div>
