--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 					<img id="social_img" src="Twitter.png" alt="Opps,you can visit twitter for the banner">
 					<h3>Stalk me as much as you want : </h3>
 					<div class="same">
-					<a target="_blank" href="https://www.instagram.com/shxb.__/"><img id="instagram" src="https://image.flaticon.com/icons/png/512/1400/1400829.png"></img></a>
+					<a target="_blank" href="https://www.instagram.com/shxb.__/"><img id="instagram" src="https://cdn-icons-png.flaticon.com/512/1077/1077042.png"></img></a>
 					
-					<a target="_blank" href="https://twitter.com/shxb7_"><img id="twitter" src="https://image.flaticon.com/icons/png/512/1384/1384049.png"></img></a>
-					<a target="_blank" href="https://github.com/shxb7"><img id="github" src="https://image.flaticon.com/icons/png/512/25/25657.png"></img></a>
-					<a target="_blank" href="https://www.linkedin.com/in/shubham-patel-88978217b/"><img id="linkedln" src="https://image.flaticon.com/icons/png/512/1384/1384088.png"></img></a>
+					<a target="_blank" href="https://twitter.com/shxb7_"><img id="twitter" src="https://cdn-icons-png.flaticon.com/512/25/25347.png"></img></a>
+					<a target="_blank" href="https://github.com/shxb7"><img id="github" src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png"></img></a>
+					<a target="_blank" href="https://www.linkedin.com/in/shubham-patel-88978217b/"><img id="linkedln" src="https://cdn-icons.flaticon.com/png/512/3669/premium/3669739.png?token=exp=1649439847~hmac=5ce1b61e620587b6449cc8e82846e55a"></img></a>
 				</div>
 				</div>
 			</div>
