--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					<img id="social_img" src="Twitter.png" alt="Opps,you can visit twitter for the banner">
 					<h3>Stalk me as much as you want : </h3>
 					<div class="same">
-					<a target="_blank" href="https://www.instagram.com/shxb.__/"><img id="instagram" src="https://cdn-icons-png.flaticon.com/512/1077/1077042.png"></img></a>
+					<a target="_blank" href="https://www.instagram.com/shxb.__/"><img id="instagram" src="insta.png"></img></a>
 					
 					<a target="_blank" href="https://twitter.com/shxb7_"><img id="twitter" src="https://cdn-icons-png.flaticon.com/512/25/25347.png"></img></a>
 					<a target="_blank" href="https://github.com/shxb7"><img id="github" src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png"></img></a>
