--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					
 
 					<ul id="navigation">
-						<li><a href="https://www.buymeacoffee.com/devshub21">Buy me a <img id="book" src="https://image.flaticon.com/icons/png/512/3534/3534033.png"></img></a></li>
+						<li><a href="https://www.buymeacoffee.com/devshub21">Buy me a <img id="book" src="bookk.png"></img></a></li>
 
 					</ul>
 				</div>
@@ -121,7 +121,7 @@
 					
 					<a target="_blank" href="https://twitter.com/shxb7_"><img id="twitter" src="https://cdn-icons-png.flaticon.com/512/25/25347.png"></img></a>
 					<a target="_blank" href="https://github.com/shxb7"><img id="github" src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png"></img></a>
-					<a target="_blank" href="https://www.linkedin.com/in/shubham-patel-88978217b/"><img id="linkedln" src="https://cdn-icons.flaticon.com/png/512/3669/premium/3669739.png?token=exp=1649439847~hmac=5ce1b61e620587b6449cc8e82846e55a"></img></a>
+					<a target="_blank" href="https://www.linkedin.com/in/shubham-patel-88978217b/"><img id="linkedln" src="new-linkedin-logo-white-black-png.png"></img></a>
 				</div>
 				</div>
 			</div>
