--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WAGMI LFG Shubham Patel</title>
+	<title>WAGMI Shubham Patel</title>
 
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
@@ -52,7 +52,7 @@
 				</div>
 
 				<div class="left-column">
-					<img id="profile_pic" src="Profile.jpeg">
+					<img id="profile_pic" src="Profile.jpg">
 					<h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
 
 					<div id="theme-options-wrapper">
