Added Superfluid achievement

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 					<div>
 						<h3>Achievements of 2022</h3>
 							<ol>
+								<li>Winner of <b>Co-Bounty of LivePeer and Superfluid in their Wavepool #4 hackathon(Dec'22)</b></li>
+								<li>Winner in <b>Push Santa Contest(Dec'22)</b></li>
 								<li>Lead a team in <b>Smart India Hackathon Grand Finale</b></li>
 								<li>Winner of <b>DAIICT's Tic Tac Toe hackathon (1st Position)</b></li>
 								<li>Selected for <b>Data Alchemist Program of Covalent</b></li>
