--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>WAGMI Shubham Patel</title>
-
+<link rel="icon" type="image/x-icon" href="https://miro.medium.com/max/2400/1*gr0GOdQpf1e7uIyEDceg3w.png">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
