--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>WAGMI Shubham Patel</title>
-<link rel="icon" type="image/x-icon" href="https://miro.medium.com/max/2400/1*gr0GOdQpf1e7uIyEDceg3w.png">
+<link rel="icon" type="image/x-icon" href="https://e7.pngegg.com/pngimages/927/935/png-clipart-deadpool-logo-marvel-heroes-2016-deadpool-wolverine-logo-superhero-icon-deadpool-free-angle-face.png">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
